# indi-3rdparty

indi-picamerav1/: CMakeLists.txt  README.md  indi_picameraV1.cpp  indi_picameraV1.h  indi_picameraV1.xml.cmake
indi-rapisw/: CMakeLists.txt  README.md  indi_rapisw.xml.cmake  rapisw.cpp  rapisw.h
